# pysheller

./: .gitignore  README.md  pyproject.toml
example/: __init__.py
example/commands/: hello-user.sh  hello.sh
pysheller/: __init__.py  app.py
