[tool.poetry]
name = "pysheller"
version = "0.1.0"
description = "Small library to craete Python application based on shell scripts."
authors = ["samedamci <samedamci@disroot.org>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.9.2"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
